Addressed PR comments

--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -17,11 +17,7 @@ variables:
     # The path to the model scoring script relative to SOURCES_DIR_TRAIN
   - name: SCORE_SCRIPT
     value: scoring/score.py
-    # The path to the batch scoring script relative to SOURCES_DIR_TRAIN
-  - name: BATCHSCORE_SCRIPT_PATH
-    value: scoring/parallel_batchscore.py
-  - name: BATCHSCORE_COPY_SCRIPT_PATH
-    value: scoring/parallel_batchscore_copyoutput.py
+    
 
   # Azure ML Variables
   - name: EXPERIMENT_NAME
@@ -41,6 +37,8 @@ variables:
   # AML Compute Cluster Config
   - name: AML_ENV_NAME
     value: diabetes_regression_training_env
+  - name: AML_ENV_TRAIN_CONDA_DEP_FILE
+    value: "conda_dependencies.yml"
   - name: AML_COMPUTE_CLUSTER_CPU_SKU
     value: STANDARD_DS2_V2
   - name: AML_COMPUTE_CLUSTER_NAME
@@ -78,9 +76,15 @@ variables:
   # - name: AML_REBUILD_ENVIRONMENT
   #  value: "false"
 
+  # Variables below are used for controlling various aspects of batch scoring
   - name: USE_GPU_FOR_SCORING
     value: False
-
+  # Conda dependencies for the batch scoring step
+  - name: AML_ENV_SCORE_CONDA_DEP_FILE
+    value: "conda_dependencies_scoring.yml"
+  # Conda dependencies for the score copying step
+  - name: AML_ENV_SCORECOPY_CONDA_DEP_FILE
+    value: "conda_dependencies_scorecopy.yml"
     # AML Compute Cluster Config for parallel batch scoring
   - name: AML_ENV_NAME_SCORING
     value: diabetes_regression_scoring_env
@@ -96,13 +100,17 @@ variables:
     value: 4
   - name: AML_CLUSTER_PRIORITY_SCORING
     value: lowpriority
-
+  # The path to the batch scoring script relative to SOURCES_DIR_TRAIN
+  - name: BATCHSCORE_SCRIPT_PATH
+    value: scoring/parallel_batchscore.py
+  - name: BATCHSCORE_COPY_SCRIPT_PATH
+    value: scoring/parallel_batchscore_copyoutput.py
   # Flag to allow rebuilding the AML Environment after it was built for the first time. 
-  # This enables dependency updates from conda_dependencies.yaml.
-  # - name: AML_REBUILD_ENVIRONMENT_SCORING
-  #  value: "false"
+  # This enables dependency updates from the conda dependencies yaml for scoring activities.
+  - name: AML_REBUILD_ENVIRONMENT_SCORING
+    value: "true"
 
-# Datastore config for scoring
+  # Datastore config for scoring
   # The storage account name and key are supplied as variables in a variable group 
   # in the Azure Pipelines library for this project. Please refer to repo docs for 
   # more details
