--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ EXPERIMENT_NAME = 'mlopspython'
 
 # AML Compute Cluster Config
 AML_ENV_NAME='diabetes_regression_training_env'
+AML_ENV_TRAIN_CONDA_DEP_FILE="conda_dependencies.yml"
 AML_COMPUTE_CLUSTER_NAME = 'train-cluster'
 AML_COMPUTE_CLUSTER_CPU_SKU = 'STANDARD_DS2_V2'
 AML_CLUSTER_MAX_NODES = '4'
@@ -25,7 +26,7 @@ AML_CLUSTER_PRIORITY = 'lowpriority'
 MODEL_NAME = 'diabetes_regression_model.pkl'
 MODEL_VERSION = '1'
 TRAIN_SCRIPT_PATH = 'training/train.py'
-BATCHSCORE_SCRIPT_PATH = 'scoring/parallel_batchscore.py'
+
 
 # AML Pipeline Config
 TRAINING_PIPELINE_NAME = 'Training Pipeline'
@@ -57,6 +58,8 @@ AML_REBUILD_ENVIRONMENT = 'false'
 
 
 USE_GPU_FOR_SCORING = "false"
+AML_ENV_SCORE_CONDA_DEP_FILE="conda_dependencies_scoring.yml"
+AML_ENV_SCORECOPY_CONDA_DEP_FILE="conda_dependencies_scorecopy.yml"
 # AML Compute Cluster Config for parallel batch scoring
 AML_ENV_NAME_SCORING='diabetes_regression_scoring_env'
 AML_ENV_NAME_SCORE_COPY='diabetes_regression_score_copy_env'
@@ -66,7 +69,8 @@ AML_CLUSTER_MAX_NODES_SCORING = '4'
 AML_CLUSTER_MIN_NODES_SCORING = '0'
 AML_CLUSTER_PRIORITY_SCORING = 'lowpriority'
 AML_REBUILD_ENVIRONMENT_SCORING = 'true'
-
+BATCHSCORE_SCRIPT_PATH = 'scoring/parallel_batchscore.py'
+BATCHSCORE_COPY_SCRIPT_PATH = 'scoring/parallel_batchscore_copyoutput.py'
 
 SCORING_DATASTORE_INPUT_CONTAINER = 'input'
 SCORING_DATASTORE_INPUT_FILENAME = 'diabetes_scoring_input.csv'
