--- a/.pipelines/diabetes_regression-batchscoring-ci.yml
+++ b/.pipelines/diabetes_regression-batchscoring-ci.yml
@@ -1,4 +1,4 @@
-# Continuous Integration (CI) pipeline that orchestrates the training, evaluation, registration, deployment, and testing of the diabetes_regression model.
+# Continuous Integration (CI) pipeline that orchestrates the batch scoring of the diabetes_regression model.
 
 resources:
   containers:
