check image location writ to file

--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -37,4 +37,5 @@ steps:
 
         # Set environment variable
         echo $IMAGE_LOCATION
+        echo $IMAGE_LOCATION >image_location.txt
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
