account for verbose

--- a/.pipelines/diabetes_regression-cd-deploy.yml
+++ b/.pipelines/diabetes_regression-cd-deploy.yml
@@ -136,6 +136,8 @@ stages:
         modelId: $(MODEL_NAME):$(MODEL_VERSION)
         scoringScriptPath: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring/score.py'
         condaFilePath: '$(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/conda_dependencies.yml'
+    - script: echo $(IMAGE_LOCATION) >image_location.txt
+      displayName: "Write image location file"
     - task: AzureWebAppContainer@1
       name: WebAppDeploy
       displayName: 'Azure Web App on Container Deploy'
