--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -33,10 +33,8 @@ steps:
         --entry-script '${{ parameters.scoringScriptPath }}' \
         --cf '${{ parameters.condaFilePath }}' \
         -v \
-        --rt python --query 'location' -o tsv)
+        --rt python --query 'location' -o tsv | tail -1)
 
         # Set environment variable
         echo $IMAGE_LOCATION
-        echo $IMAGE_LOCATION >image_location.txt
-        cat image_location.txt
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
