--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -27,14 +27,17 @@ steps:
         set -e # fail on error
 
         # Create model package using CLI
-        IMAGE_LOCATION=$(\
+        PACKAGE_OUTPUT=$(\
         az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
         --model '${{ parameters.modelId }}' \
         --entry-script '${{ parameters.scoringScriptPath }}' \
         --cf '${{ parameters.condaFilePath }}' \
         -v \
-        --rt python --query 'location' -o tsv | tail -1)
+        --rt python --query 'location' -o tsv)
+        
+        # Print output
+        echo $PACKAGE_OUTPUT
 
         # Set environment variable
-        echo $IMAGE_LOCATION
+        IMAGE_LOCATION=$($PACKAGE_OUTPUT | tail -1)
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
