--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -27,17 +27,17 @@ steps:
         set -e # fail on error
 
         # Create model package using CLI
-        PACKAGE_OUTPUT=$(\
         az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
         --model '${{ parameters.modelId }}' \
         --entry-script '${{ parameters.scoringScriptPath }}' \
         --cf '${{ parameters.condaFilePath }}' \
         -v \
-        --rt python --query 'location' -o tsv)
-        
-        # Print output
-        echo $PACKAGE_OUTPUT
+        --rt python --query 'location' -o tsv > image_creation.txt
+
+        cat image_creation.txt
 
         # Set environment variable
-        IMAGE_LOCATION=$($PACKAGE_OUTPUT | tail -1)
+        IMAGE_LOCATION=$(tail -n 1 image_creation.txt)
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
+  - publish: image_creation.txt
+    artifact: image
