--- a/.pipelines/diabetes_regression-package-model-template.yml
+++ b/.pipelines/diabetes_regression-package-model-template.yml
@@ -27,13 +27,16 @@ steps:
         set -e # fail on error
 
         # Create model package using CLI
-        IMAGE_LOCATION=$(\
         az ml model package --workspace-name $(WORKSPACE_NAME) -g $(RESOURCE_GROUP) \
         --model '${{ parameters.modelId }}' \
         --entry-script '${{ parameters.scoringScriptPath }}' \
         --cf '${{ parameters.condaFilePath }}' \
-        --rt python --query 'location' -o tsv)
+        -v \
+        --rt python --query 'location' -o tsv > image_logs.txt
 
-        # Set environment variable
-        echo $IMAGE_LOCATION
+        # Show logs
+        cat image_logs.txt
+
+        # Set environment variable using the last line of logs that has the package location
+        IMAGE_LOCATION=$(tail -n 1 image_logs.txt)
         echo "##vso[task.setvariable variable=IMAGE_LOCATION]$IMAGE_LOCATION"
