fail on deploy error'

--- a/.pipelines/diabetes_regression-cd-deploy.yml
+++ b/.pipelines/diabetes_regression-cd-deploy.yml
@@ -57,8 +57,9 @@ stages:
         scriptLocation: inlineScript
         workingDirectory: $(Build.SourcesDirectory)/$(SOURCES_DIR_TRAIN)/scoring
         inlineScript: |
+          set -e # fail on error
+
           az ml model deploy --name $(ACI_DEPLOYMENT_NAME) --model '$(MODEL_NAME):$(MODEL_VERSION)' \
-          --ic inference_config.yml \
           --dc deployment_config_aci.yml \
           -g $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) \
           --overwrite -v
