--- a/environment_setup/iac-create-environment-pipeline-arm.yml
+++ b/environment_setup/iac-create-environment-pipeline-arm.yml
@@ -30,7 +30,7 @@ steps:
     location: $(LOCATION)
     templateLocation: 'Linked artifact'
     csmFile: '$(Build.SourcesDirectory)/environment_setup/arm-templates/cloud-environment.json'
-    overrideParameters: '-baseName $(BASE_NAME) -location $(LOCATION) -workspace $(WORKSPACE_NAME)'
+    overrideParameters: '-baseName $(BASE_NAME) -location $(LOCATION) -workspace $(WORKSPACE_NAME) -sku $(WORKSPACE_SKU)'
     deploymentMode: 'Incremental'
   displayName: 'Deploy MLOps resources to Azure'
 
