--- a/.pipelines/diabetes_regression-publish-model-artifact-template.yml
+++ b/.pipelines/diabetes_regression-publish-model-artifact-template.yml
@@ -16,7 +16,7 @@ steps:
       set -e # fail on error
 
       # Get the model using the build ID tag
-      FOUND_MODEL=$(az ml model list -g $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) --tag BuildId=$(modelbuildid) --query '[0]')
+      FOUND_MODEL=$(az ml model list -g $(RESOURCE_GROUP) --workspace-name $(WORKSPACE_NAME) --tag BuildId=$(Build.BuildId) --query '[0]')
       
       # If the variable is empty, print and fail
       [[ -z "$FOUND_MODEL" ]] && { echo "Model was not registered for this run." ; exit 1; }
