--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,33 @@
 # Azure Subscription Variables
 SUBSCRIPTION_ID = ''
-LOCATION = 'westeurope'
+LOCATION = ''
 TENANT_ID = ''
 BASE_NAME = ''
 SP_APP_ID = ''
 SP_APP_SECRET = ''
-RESOUCE_GROUP = 'mlops-rg'
+RESOURCE_GROUP = 'mlops-RG'
 
 # Mock build/release ID for local testing
 BUILD_BUILDID = '001'
 
 # Azure ML Workspace Variables
-WORKSPACE_NAME = 'aml-workspace'
-EXPERIMENT_NAME = ''
+WORKSPACE_NAME = 'mlops-aml-ws'
+EXPERIMENT_NAME = 'mlopspython'
 
 # AML Compute Cluster Config
 AML_ENV_NAME='diabetes_regression_training_env'
+AML_ENV_TRAIN_CONDA_DEP_FILE="conda_dependencies.yml"
 AML_COMPUTE_CLUSTER_NAME = 'train-cluster'
 AML_COMPUTE_CLUSTER_CPU_SKU = 'STANDARD_DS2_V2'
 AML_CLUSTER_MAX_NODES = '4'
 AML_CLUSTER_MIN_NODES = '0'
 AML_CLUSTER_PRIORITY = 'lowpriority'
 # Training Config
-MODEL_NAME = 'sklearn_regression_model.pkl'
+MODEL_NAME = 'diabetes_regression_model.pkl'
 MODEL_VERSION = '1'
 TRAIN_SCRIPT_PATH = 'training/train.py'
+
+
 # AML Pipeline Config
 TRAINING_PIPELINE_NAME = 'Training Pipeline'
 MODEL_PATH = ''
@@ -51,3 +54,28 @@ ALLOW_RUN_CANCEL = 'true'
 
 # Flag to allow rebuilding the AML Environment after it was built for the first time. This enables dependency updates from conda_dependencies.yaml.
 AML_REBUILD_ENVIRONMENT = 'false'
+
+
+
+USE_GPU_FOR_SCORING = "false"
+AML_ENV_SCORE_CONDA_DEP_FILE="conda_dependencies_scoring.yml"
+AML_ENV_SCORECOPY_CONDA_DEP_FILE="conda_dependencies_scorecopy.yml"
+# AML Compute Cluster Config for parallel batch scoring
+AML_ENV_NAME_SCORING='diabetes_regression_scoring_env'
+AML_ENV_NAME_SCORE_COPY='diabetes_regression_score_copy_env'
+AML_COMPUTE_CLUSTER_NAME_SCORING = 'score-cluster'
+AML_COMPUTE_CLUSTER_CPU_SKU_SCORING = 'STANDARD_DS2_V2'
+AML_CLUSTER_MAX_NODES_SCORING = '4'
+AML_CLUSTER_MIN_NODES_SCORING = '0'
+AML_CLUSTER_PRIORITY_SCORING = 'lowpriority'
+AML_REBUILD_ENVIRONMENT_SCORING = 'true'
+BATCHSCORE_SCRIPT_PATH = 'scoring/parallel_batchscore.py'
+BATCHSCORE_COPY_SCRIPT_PATH = 'scoring/parallel_batchscore_copyoutput.py'
+
+
+SCORING_DATASTORE_INPUT_CONTAINER = 'input'
+SCORING_DATASTORE_INPUT_FILENAME = 'diabetes_scoring_input.csv'
+SCORING_DATASTORE_OUTPUT_CONTAINER = 'output'
+SCORING_DATASTORE_OUTPUT_FILENAME = 'diabetes_scoring_output.csv'
+SCORING_DATASET_NAME = 'diabetes_scoring_ds'
+SCORING_PIPELINE_NAME = 'diabetes-scoring-pipeline'
