Squashed commit of the following:
commit 493ed3e64f89483005eade0b553db21a98f6f1bb
Author: j-so <jenns@microsoft.com>
Date:   Mon Jun 22 16:42:07 2020 -0700

    mark as output

commit 1ca7a592ad24ee0fe1e7ba28b41f97431f07039d
Author: j-so <jenns@microsoft.com>
Date:   Mon Jun 22 16:12:10 2020 -0700

    fix import

commit 743e301081a439472b3bc778b22df3764b16d945
Author: j-so <jenns@microsoft.com>
Date:   Mon Jun 22 15:59:43 2020 -0700

    more fixes

commit 44abcac49d1b593da0f87bf8553638887d98f63c
Author: j-so <jenns@microsoft.com>
Date:   Mon Jun 22 15:50:49 2020 -0700

    fix batch scoring

--- a/.pipelines/diabetes_regression-batchscoring-ci.yml
+++ b/.pipelines/diabetes_regression-batchscoring-ci.yml
@@ -65,14 +65,16 @@ stages:
           export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
           # Invoke the Python building and publishing a training pipeline
           python -m ml_service.pipelines.diabetes_regression_build_parallel_batchscore_pipeline
- 
+
   - job: "Run_Batch_Score_Pipeline"
     displayName: "Run Batch Scoring Pipeline"
-    dependsOn: "Build_Batch_Scoring_Pipeline"
+    dependsOn: ["Build_Batch_Scoring_Pipeline"]
     timeoutInMinutes: 240
     pool: server
     variables:
       pipeline_id: $[ dependencies.Build_Batch_Scoring_Pipeline.outputs['publish_batchscore.pipeline_id']]
+      model_name: $[ dependencies.Build_Batch_Scoring_Pipeline.outputs['get_model.MODEL_NAME']]
+      model_version: $[ dependencies.Build_Batch_Scoring_Pipeline.outputs['get_model.MODEL_VERSION']]
     steps:
     - task: ms-air-aiagility.vss-services-azureml.azureml-restApi-task.MLPublishedPipelineRestAPITask@0
       displayName: 'Invoke Batch Scoring pipeline'
@@ -80,5 +82,5 @@ stages:
         azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
         PipelineId: '$(pipeline_id)'
         ExperimentName: '$(EXPERIMENT_NAME)'
-        PipelineParameters: '"ParameterAssignments": {"model_name": "$(MODEL_NAME)", "model_version": "$(MODEL_VERSION)"}'
+        PipelineParameters: '"ParameterAssignments": {"model_name": "$(model_name)", "model_version": "$(model_version)"}'
       
