--- a/.pipelines/diabetes_regression-get-model-id-artifact-template.yml
+++ b/.pipelines/diabetes_regression-get-model-id-artifact-template.yml
@@ -1,3 +1,5 @@
+# Pipeline template that gets the model name and version from a previous build's artifact
+
 parameters:
 - name: projectId
   type: string
@@ -26,6 +28,7 @@ steps:
       runBranch: '$(Build.SourceBranch)'
       path: $(Build.SourcesDirectory)/bin
   - task: Bash@3
+    name: get_model
     displayName: Parse Json for Model Name and Version
     inputs:
       targetType: 'inline'
@@ -41,5 +44,5 @@ steps:
         echo "Model Version: $MODEL_VERSION"
 
         # Set environment variables
-        echo "##vso[task.setvariable variable=MODEL_VERSION]$MODEL_VERSION"
-        echo "##vso[task.setvariable variable=MODEL_NAME]$MODEL_NAME"
+        echo "##vso[task.setvariable variable=MODEL_VERSION;isOutput=true]$MODEL_VERSION"
+        echo "##vso[task.setvariable variable=MODEL_NAME;isOutput=true]$MODEL_NAME"
