--- a/.pipelines/diabetes_regression-batchscoring-ci.yml
+++ b/.pipelines/diabetes_regression-batchscoring-ci.yml
@@ -54,12 +54,8 @@ stages:
         projectId: '$(resources.pipeline.model-train-ci.projectID)'
         pipelineId: '$(resources.pipeline.model-train-ci.pipelineID)'
         artifactBuildId: ${{ parameters.artifactBuildId }}
-    # Map the datastore access secret to an environment variable
-    - script: |
-        echo ##vso[task.setvariable variable=SCORING_DATASTORE_ACCESS_KEY]$(SCORING_DATASTORE_ACCESS_KEY)
-      env:
-        SCORING_DATASTORE_ACCESS_KEY: $(SCORING_DATASTORE_ACCESS_KEY)
     - task: AzureCLI@1
+      displayName: "Publish Batch Scoring Pipeline"
       name: publish_batchscore
       inputs:
         azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'        
@@ -70,6 +66,8 @@ stages:
           export SUBSCRIPTION_ID=$(az account show --query id -o tsv)
           # Invoke the Python building and publishing a training pipeline
           python -m ml_service.pipelines.diabetes_regression_build_parallel_batchscore_pipeline
+      env:
+        SCORING_DATASTORE_ACCESS_KEY: $(SCORING_DATASTORE_ACCESS_KEY)
 
   - job: "Run_Batch_Score_Pipeline"
     displayName: "Run Batch Scoring Pipeline"
