fix pipeline status badge and tf naming uniqueness

--- a/environment_setup/iac-create-environment-pipeline-tf.yml
+++ b/environment_setup/iac-create-environment-pipeline-tf.yml
@@ -37,7 +37,7 @@ steps:
     ensureBackend: true
     backendAzureRmResourceGroupLocation: $(LOCATION)
     backendAzureRmResourceGroupName: $(RESOURCE_GROUP)
-    backendAzureRmStorageAccountName: 'statestor'
+    backendAzureRmStorageAccountName: '$(BASE_NAME)statestor'
     backendAzureRmStorageAccountSku: 'Standard_LRS'
     backendAzureRmContainerName: 'tfstate-cont'
     backendAzureRmKey: 'mlopsinfra.tfstate'
