Adds Observability Modules

--- a/.env.example
+++ b/.env.example
@@ -79,3 +79,6 @@ SCORING_DATASTORE_OUTPUT_CONTAINER = 'output'
 SCORING_DATASTORE_OUTPUT_FILENAME = 'diabetes_scoring_output.csv'
 SCORING_DATASET_NAME = 'diabetes_scoring_ds'
 SCORING_PIPELINE_NAME = 'diabetes-scoring-pipeline'
+
+# Observability
+APP_INSIGHTS_CONNECTION_STRING = ''
