--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -3,19 +3,19 @@ variables:
   # Source Config
   # The directory containing the scripts for training, evaluating, and registering the model
   - name: SOURCES_DIR_TRAIN
-    value: diabetes_regression
+    value: .
     # The path to the model training script under SOURCES_DIR_TRAIN
   - name: TRAIN_SCRIPT_PATH
-    value: training/train_aml.py
+    value: diabetes_regression/training/train_aml.py
     # The path to the model evaluation script under SOURCES_DIR_TRAIN
   - name: EVALUATE_SCRIPT_PATH
-    value: evaluate/evaluate_model.py
+    value: diabetes_regression/evaluate/evaluate_model.py
     # The path to the model registration script under SOURCES_DIR_TRAIN
   - name: REGISTER_SCRIPT_PATH
-    value: register/register_model.py
+    value: diabetes_regression/register/register_model.py
     # The path to the model scoring script relative to SOURCES_DIR_TRAIN
   - name: SCORE_SCRIPT
-    value: scoring/score.py
+    value: diabetes_regression/scoring/score.py
     
 
   # Azure ML Variables
