--- a/diabetes_regression/conda_dependencies.yml
+++ b/diabetes_regression/conda_dependencies.yml
@@ -43,3 +43,6 @@ dependencies:
       - opencensus-context==0.1.1
       - opencensus-ext-azure==1.0.2
       - python-dotenv==0.10.3
+
+      # Data Classes
+      - dataclasses
