--- a/diabetes_regression/conda_dependencies_scorecopy.yml
+++ b/diabetes_regression/conda_dependencies_scorecopy.yml
@@ -30,5 +30,11 @@ dependencies:
       # Score copying deps
       - azure-storage-blob
 
+      # Observability
+      - opencensus==0.7.7
+      - opencensus-context==0.1.1
+      - opencensus-ext-azure==1.0.2
+      - python-dotenv==0.10.3
+
       # Data Classes
       - dataclasses
