--- a/environment_setup/arm-templates/webapp-env.json
+++ b/environment_setup/arm-templates/webapp-env.json
@@ -33,7 +33,7 @@
       "type": "string",
       "defaultValue": "[concat(toLower(parameters('baseName')),'webapp')]",
       "metadata": {
-        "description": "Base name of the resource such as web app name and app service plan "
+        "description": "Base name of the web app name and app service plan"
       },
       "minLength": 2
     },
